--- a/com.test.supertest/pom.xml
+++ b/com.test.supertest/pom.xml
@@ -25,7 +25,7 @@
                 <inherited>true</inherited>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng-treads.xml</suiteXmlFile>
+                        <suiteXmlFile>testing-treads.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
