--- a/com.test.testAPI/pom.xml
+++ b/com.test.testAPI/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>com.test.superAPItest</artifactId>
+    <artifactId>com.test.testAPI</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -88,6 +88,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.3.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
